In kpanel-0.17:
 
    Patchlevel 6:
       - menu sorting fixed (thanks to Michael Bialas)
         Please note that the sort order can individually changed
         for each menu with kmenuedit.
       - a workaround for swallowed windows on buttons.
         Unfortunatly there is a severe problem with qt-1.3. I am
         no longer able to offer working swallowed windows :-(
         So docking will need some more time (and probably qt-1.5)
         as does the swallwed pager. Sorry.
       - transient windows do no longer appear on the taskbar
       - tiny bug with editing desktop-labels fixed 

    Patchlevel 5:
       - Changed pmenu to sort the items in the order of the text_names
         instead of the filenames as default.
         Also pmenu expects a sorted list of the real filenames in the
         "SortOrder" entry of the ".directory" file now for a user
         defined sort order.
	 This requires some changes to kmenuedit.
       - bugfix for occassional crashes with fast addding/removing of windows
       - uses kprocess for execution
    Patchlevel 4:
       - paints scaled minicions everywhere, even in the system menu.
         I thought this looks ugly, but Torben requested this feature :-)
       - empty "Personal" folder is ignored
       - weird taskbar bug (wrong window) fixed. Thanks to Stephan Kulow
         for bug hunting.
       - active taskbar button painted down (for Stephan Kulow :-)
       - Fix for qt-tooltips on taskbarbuttons
       - fix for big icons on panel buttons
    Patchlevel 3:
       - fixed the dragging of data onto panel buttons
       - no more need for the kdelnk suffix (but mimetype)
       - several small fixes
       - TaskbarPosition=top_left as default
    Patchlevel 2:
       - context menu improved/fixed
    Patchlevel 1:
       - Alt-F1 global shortcut for the system menu


==================kpanel-0.17 has been almost a rewrite============

Major visible changes: